- login.php:      - Redesigned login page.      - Fixed Footer overlapping when window is resized smaller      or viewed on mobile devices.      - login page now fully responsive. - new folder structure created to house individual file types. - Added seperate css and js files for login page - login.css, login.js - Added util.css

--- a/page/style.css
+++ b/page/style.css
@@ -198,18 +198,24 @@ body {
   text-transform: capitalize;
 }
 
-#footer {
-  position: fixed;
+.footer {
   text-align: center;
-  bottom: 0;
-  padding: 10px 10px 0px 10px;
+  background-color: gray;
+	color: white;
   width: 100%;
   height: 40px;  
   font-size: 20px;
 }
+.fixed {
+	bottom: 0;
+	position: absolute;
+}
+
 
 .invalid-feedback{
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  text-align: center;
+  display: block;
   color: #FF0000;
   font-size: 18px;	
 	
